# esp-dev-kits

examples/esp32-s3-lcd-ev-board/examples/lvgl_demos/main/: CMakeLists.txt  idf_component.yml  main.c
examples/esp32-s3-lcd-ev-board/examples/lvgl_demos/main/app/: app_weather.c  app_weather.h  app_wifi.c  settings.c  ui_bridge.c  ui_bridge.h
examples/esp32-s3-lcd-ev-board/examples/lvgl_demos/main/controller/: event_system.c  event_system.h  task_manager.c  task_manager.h  ui_geocoding_bridge.c  ui_geocoding_bridge.h  ui_weather_bridge.c  ui_weather_bridge.h  ui_wifi_bridge.c  ui_wifi_bridge.h
examples/esp32-s3-lcd-ev-board/examples/lvgl_demos/main/model/: app_settings.c  app_settings.h  app_sntp.c  app_sntp.h  app_spiffs.c  app_spiffs.h  app_weather.c  app_weather.h  app_wifi.c  app_wifi.h  settings.h
examples/esp32-s3-lcd-ev-board/examples/lvgl_demos/main/ui_eez_test1/: tets1.eez-project  tets1.eez-project-ui-state
examples/esp32-s3-lcd-ev-board/examples/lvgl_demos/main/ui_eez_test1/src/ui/: fonts.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui.h  ui_font_poppins.c  ui_font_poppins25.c  ui_image_iso_texel.c  vars.h
examples/esp32-s3-lcd-ev-board/examples/lvgl_demos/main/ui_txl_test1/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
examples/esp32-s3-lcd-ev-board/examples/lvgl_demos/main/ui_txl_test1/fonts/: ui_font_Font1.c  ui_font_PoppinsBlack25.c  ui_font_PoppinsBlack40.c
examples/esp32-s3-lcd-ev-board/examples/lvgl_demos/main/ui_txl_test1/images/: ui_img_icono_configuracion_small_png.c  ui_img_iso_teslagen_png.c
examples/esp32-s3-lcd-ev-board/examples/lvgl_demos/main/ui_txl_test1/screens/: ui_ModoTrabajo.c  ui_ModoTrabajo.h  ui_Perfil.c  ui_Perfil.h  ui_Presentacion.c  ui_Presentacion.h  ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen4.c  ui_Screen4.h  ui_Trabajando.c  ui_Trabajando.h
examples/esp32-s3-lcd-ev-board/examples/lvgl_demos/main/view/: Test1.eez-project  Test1.eez-project-ui-state
examples/esp32-s3-lcd-ev-board/examples/lvgl_demos/main/view/src_ui/: actions.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui.h  vars.h
examples/esp32-s3-lcd-ev-board/examples/lvgl_demos/main/view/src_ui/images/: ui_image_iso_texel.c  ui_image_logo_tt.c  ui_image_tesla_gen.c  ui_image_wh_clear_day.c  ui_image_wh_clear_night.c  ui_image_wh_cloudy.c  ui_image_wh_drizzle.c  ui_image_wh_fog.c  ui_image_wh_partly_cloudy_day.c  ui_image_wh_partly_cloudy_night.c  ui_image_wh_rain.c  ui_image_wh_sleet.c  ui_image_wh_snow.c  (+2 more)
(+13 files in other folders)
